--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
-        "laravel/lumen-framework": "^7.0"
+        "chuckrincon/lumen-config-discover": "^1.0",
+        "dingo/api": "^3.0",
+        "laravel/lumen-framework": "^7.0",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
+        "flipbox/lumen-generator": "^7.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^8.5"
