Update environment file

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,11 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+API_PREFIX=api
+API_VERSION=v1
+API_DEBUG=true
+API_NAME="Lumen API"
+API_DEFAULT_FORMAT=json
+
+JWT_SECRET=
